# qt-mastery-lab

./: .gitignore  AGENTS.md  README.md
basic_study/: README.md
basic_study/20260528/: minimal_ui_demo.py  step2_signal_layout_demo.py  test_0601_01.py  test_0609_02_signal_01.py  test_0609_02_signal_01_template.py  test_0609_02_signal_02.py  test_0609_02_signal_02_template.py  test_0609_02_signal_03.py  test_0609_02_signal_03_template.py  test_0609_02_signal_04.py  test_0609_02_signal_04_template.py  test_0609_02_signal_05.py  test_0609_02_signal_05_template.py  test_0609_03_qobject_01.py  test_0609_03_qobject_01_template.py  test_0609_03_qobject_02.py  test_0609_03_qobject_02_template.py  test_0609_03_qobject_03.py  test_0609_03_qobject_03_template.py  test_0610_04_event_01.py  test_0610_04_event_01_template.py  test_0610_04_event_02.py  test_0610_04_event_02_template.py  test_0610_04_event_03.py  test_0610_04_event_03_template.py  test_0610_05_layout_01.py  test_0610_05_layout_01_template.py  test_0610_05_layout_02.py  test_0610_05_layout_02_template.py  test_0610_05_layout_03.py  (+13 more)
basic_study/20260618/test_0624_fileproc_00/: CMakeLists.txt  main.cpp
basic_study/20260618/test_0626_pybind_00/: bindings.cpp  crc_calculator.cpp  crc_calculator.h  main.py  pyproject.toml  setup.py  test_crc.py
basic_study/20260618/test_0626_pybind_00/test_0626_pybind_00.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
docs/: ai-context.md  learning-roadmap.md  qt-cxx-qa.md  qt-signal-slot-qa.md
showcase/: README.md
week01-objects-signals/: README.md
(+37 files in other folders)
